# crm-desktop-tauri

./: .gitignore  README.md  angular.json  firebase.json  main.js  package-lock.json  package.json  tsconfig.app.json
.github/workflows/: tauri-build.yml
src/: index.html  main.ts  styles.css  typings.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: app.component.spec.ts  app.component.ts  app.module.ts  app.routes.ts
src/app/layout/: layout.component.css  layout.component.html  layout.component.ts
src/app/models/: invoice.model.ts
src/app/pages/customers/: customers.component.css  customers.component.html  customers.component.ts
src/app/pages/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
src/app/pages/inquiry-master/: inquiry-master.component.css  inquiry-master.component.html  inquiry-master.component.spec.ts  inquiry-master.component.ts
src/app/pages/inventory/: inventory.component.css  inventory.component.html  inventory.component.spec.ts  inventory.component.ts
src/app/pages/invoices/: invoices.component.css  invoices.component.html  invoices.component.spec.ts  invoices.component.ts
src/app/pages/offers/: create-offer.component.css  create-offer.component.html  create-offer.component.ts  offers.component.css  offers.component.html  offers.component.ts
src/app/service/: db.service.ts
src/assets/: Customers-for-CRM-trial-verified.xlsx  Products-for-CRM-trial-verified.xlsx
src/assets/Template/: Purchase_Order_Template.xlsx
(+25 files in other folders)
